--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solicitud de Trabajo</title>
+    <title>Solicitud de Trabajo - SSJ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
@@ -12,7 +12,7 @@
     <div class="container mt-5">
       <div class="card shadow">
         <div class="card-body">
-          <h3 class="card-title text-center mb-4">Formulario de Solicitud de Trabajo</h3>
+          <h3 class="card-title text-center mb-4">Formulario de Solicitud de Trabajo a Mantenimiento</h3>
           <form id="jobRequestForm" enctype="multipart/form-data">
             <div class="mb-3">
               <label class="form-label">Nombre del solicitante</label>
